# snowflake-cli-package

./: .gitignore  README.md  pyproject.toml
docs/: package design.md
src/snowflake_cli_package/: __init__.py  commands.py  manager.py  plugin_spec.py  version_utils.py
tests/: conftest.py  test_commands.py  test_manager.py  test_version_utils.py
